feat: index.html header 부분 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 
 <body>
 
+    <header class="header-menu" id="header-menu">
+
+        <div class="header-menu-wrapper">
+
+            <div class="header-jemok">
+                <h1 class="text-center">PetTalk</h1>
+            </div>
+
+            <div class="header-join-80">
+                <!-- 여기에 내용 추가 -->
+            </div>
+
+        </div>
+
+    </header>
+
 </body>
 
 </html>
