feat: index.html nav 부분 추가

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
                 <!-- 여기에 내용 추가 -->
             </div>
 
+            <nav class="tm-nav1" id="tm-nav1">     
+                <ul class="itemul">
+                    <li class ="tm-singup"><a href="singup.html" class="tm-nav-link">
+                        회원가입
+                    </a></li>
+                    <li class ="tm-login"><a href="login.html" class="tm-nav-link">
+                        로그인
+                    </a></li>
+                </ul>
+            </nav>
+
         </div>
 
     </header>
